[gd_scene load_steps=2 format=3 uid="uid://d1bxnwgair8jv"]

[ext_resource type="Script" uid="uid://bjmwyyutoqy8g" path="res://scenes/ui/event_popup.gd" id="1_vu1ub"]

[node name="EventPopup" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vu1ub")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.2, 0.2, 0.2, 1)
layout_mode = 0
offset_left = 660.0
offset_top = 360.0
offset_right = 1260.0
offset_bottom = 760.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="EventTitle" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18

[node name="EventText" type="RichTextLabel" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
bbcode_enabled = true

[node name="ChoicesContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Close"
